# recollex

./: .gitignore  README.md  pixi.toml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/: code_style.md  design.md  recollect_api.md  recollex_api.md  recollex_tuning.md
meta/: pyproject.toml
pkgs/recollex/: pyproject.toml
pkgs/recollex-cuda/: pyproject.toml
pkgs/recollex-directml/: pyproject.toml
pkgs/recollex-rocm/: pyproject.toml
pkgs/recollex-silicon/: pyproject.toml
recollex/: __init__.py  abcs.py  bitmaps.py  engine.py  hooks.py  utils.py
recollex/encoder/: splade.py  stonnx.py
recollex/io/: __init__.py  segments.py  sqlite_store.py
tests/: conftest.py  test_add_many_empty.py  test_batch_api.py  test_bitmaps_unit.py  test_crash_safety.py  test_csr_cache_lru.py  test_defaults_layout.py  test_e2e_splade.py  test_engine.py  test_engine_add_many_validation.py  test_engine_all_docs_bitmap.py  test_engine_tags_dict.py  test_exclude_numeric_ids.py  test_filters_exclusions.py  test_hooks.py  test_hooks_helpers_unit.py  test_hooks_helpers_unit_extra.py  test_hooks_misc.py  test_hooks_recent_budget.py  test_live_docs_count.py  test_manifest_lock.py  test_manifest_lock_reentrant.py  test_min_score.py  test_recent_universe_scope.py  test_remove_additional.py  test_remove_by.py  test_remove_df.py  test_remove_more.py  test_scoring_gating.py  test_search_edge_cases.py  test_segment_reader_reopen.py  test_segments.py  test_segments_io_manifest.py  test_smoke.py  test_splade_integration.py  test_splade_prefetch_unit.py  test_splade_unit.py  test_sqlite_store.py  test_stonnx_equiv.py  test_stonnx_unit.py  (+2 more)
