[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recollex"
version = "0.1.0"
description = "RAG indexer based on Sparse Neural Embeddings."
readme = "README.md"
authors = [
  { name="Chris Bates", email="1314008+chrsbats@users.noreply.github.com" },
]
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "python-ulid>=3,<4",
    "pyroaring>=1,<2",
    "sentence-transformers>=5,<6",
    "numpy>=2.0",
    "scipy>=1.14"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["recollex*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
